src/main/java/syntactic/test/failing/constructorWithReturn.ru
impl A {
    .() -> int {
        ret 0;
    }
}
start{}